--- a/config/logging.yaml
+++ b/config/logging.yaml
@@ -17,7 +17,31 @@ handlers:
     maxBytes: 10485760 # 10MB
     backupCount: 5
 loggers:
-  '':
+  uvicorn.error:
+    level: INFO
+    handlers: [console, file]
+    propagate: no
+
+  uvicorn.access:
+    level: INFO
+    handlers: [console, file]
+    propagate: no
+
+  __main__:
     level: DEBUG
     handlers: [console, file]
     propagate: no
+
+  api:
+    level: DEBUG
+    handlers: [console, file]
+    propagate: no
+
+  src:
+    level: DEBUG
+    handlers: [console, file]
+    propagate: no
+
+root:
+  level: WARNING
+  handlers: [console, file]
