--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Login to Harbor
       uses: docker/login-action@v3
       with:
-        registry: ${{ secrets.HARBOR_REGISTRY }}
+        registry: ${{ vars.HARBOR_REGISTRY }}
         username: ${{ secrets.HARBOR_USERNAME }}
         password: ${{ secrets.HARBOR_PASSWORD }}
 
@@ -36,7 +36,7 @@ jobs:
         context: .
         push: true
         tags: |
-          hoaiphuongdg26/ci-build-failure-api:latest
-          hoaiphuongdg26/ci-build-failure-api:${{ env.SHORT_SHA }}
+          ${{ vars.HARBOR_NAMESPACE }}/${{ vars.HARBOR_IMAGE }}:latest
+          ${{ vars.HARBOR_NAMESPACE }}/${{ vars.HARBOR_IMAGE }}:${{ env.SHORT_SHA }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
