--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,12 @@ uvicorn[standard]>=0.22,<1.0
 mlflow>=2.0,<3.0
 pandas>=1.3,<3.0
 numpy>=1.21,<2.0
-tensorflow==2.19.0
 scikit-learn>=1.0,<2.0
 pydantic==2.6.4
 python-dotenv>=0.21
 protobuf==3.20.3
-dotenv
-cloud-tpu-client
-flask
-seaborn
-plotly
-boto3
 dagshub
 pika
-pytest
-dvc
-dvc_s3
+dvc[gs,s3]>=3.0.0,<4.0.0
+keras
+tensorflow
